refactor: simplify getAllSemesters method by using toList() for brevity