@@ -1,7 +1,6 @@
 package org.ject.support.domain.recruit.service;
 
 import java.util.List;
-import java.util.stream.Collectors;
 import lombok.RequiredArgsConstructor;
 import org.ject.support.domain.recruit.dto.SemesterListResponse;
 import org.ject.support.domain.recruit.repository.SemesterRepository;
@@ -21,6 +20,6 @@ public class SemesterInquiryService implements SemesterInquiryUsecase {
     public List<SemesterListResponse> getAllSemesters() {
         return semesterRepository.findAll().stream()
                 .map(SemesterListResponse::from)
-                .collect(Collectors.toList());
+                .toList();
     }
 }
